{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 92,
  "lineage": "c9d151e8-abc0-96e5-9336-fd2362dab920",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060978575683a49d5",
            "arn": "arn:aws:ec2:us-east-2:080403789929:elastic-ip/eipalloc-060978575683a49d5",
            "association_id": "eipassoc-0fc28c159ac5d11d1",
            "domain": "vpc",
            "id": "eipalloc-060978575683a49d5",
            "instance": "i-0ee94f29bc560e93e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02be258888b4601a2",
            "private_dns": "ip-10-0-1-127.us-east-2.compute.internal",
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-3-21-5-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.5.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fitflow-app-eip",
              "Project": "fitflow"
            },
            "tags_all": {
              "Name": "fitflow-app-eip",
              "Project": "fitflow"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_server",
            "aws_key_pair.fitflow",
            "aws_security_group.app_server",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0463f0a7eb59589d2",
            "arn": "arn:aws:ec2:us-east-2:080403789929:elastic-ip/eipalloc-0463f0a7eb59589d2",
            "association_id": "eipassoc-0320a01e7b8085c8c",
            "domain": "vpc",
            "id": "eipalloc-0463f0a7eb59589d2",
            "instance": "i-09d476836b7aca090",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c792ed05bc6596ce",
            "private_dns": "ip-10-0-1-196.us-east-2.compute.internal",
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-18-225-100-178.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.100.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fitflow-jenkins-eip",
              "Project": "fitflow"
            },
            "tags_all": {
              "Name": "fitflow-jenkins-eip",
              "Project": "fitflow"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.jenkins",
            "aws_key_pair.fitflow",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074d6ada17cb05dff",
            "arn": "arn:aws:ec2:us-east-2:080403789929:instance/i-0ee94f29bc560e93e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee94f29bc560e93e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fitflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02be258888b4601a2",
            "private_dns": "ip-10-0-1-127.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-3-21-5-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.5.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-002960f5bd6390b21",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c050708d5a882acc",
            "tags": {
              "Environment": "dev",
              "Name": "fitflow-app-server",
              "Project": "fitflow",
              "Role": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fitflow-app-server",
              "Project": "fitflow",
              "Role": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c23b6c17ba630c0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.fitflow",
            "aws_security_group.app_server",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074d6ada17cb05dff",
            "arn": "arn:aws:ec2:us-east-2:080403789929:instance/i-09d476836b7aca090",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d476836b7aca090",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fitflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c792ed05bc6596ce",
            "private_dns": "ip-10-0-1-196.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-18-225-100-178.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.100.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a74b730d8fe89ea7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c050708d5a882acc",
            "tags": {
              "Environment": "dev",
              "Name": "fitflow-jenkins",
              "Project": "fitflow",
              "Role": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fitflow-jenkins",
              "Project": "fitflow",
              "Role": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ee901be2a6981e5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.fitflow",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:internet-gateway/igw-04c1d93dc24a15f73",
            "id": "igw-04c1d93dc24a15f73",
            "owner_id": "080403789929",
            "tags": {
              "Environment": "dev",
              "Name": "$(var.project_name)-igw",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "$(var.project_name)-igw",
              "Project": "fitflow"
            },
            "vpc_id": "vpc-0a0b958b94506d56a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:route-table/rtb-0b3a909e82fafff23",
            "id": "rtb-0b3a909e82fafff23",
            "owner_id": "080403789929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c1d93dc24a15f73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "$(var.project_name)-public-rt",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "$(var.project_name)-public-rt",
              "Project": "fitflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0b958b94506d56a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bdf21c22314dfec",
            "route_table_id": "rtb-0b3a909e82fafff23",
            "subnet_id": "subnet-0c050708d5a882acc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:security-group/sg-04c23b6c17ba630c0",
            "description": "Security group for $(var.project_name)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c23b6c17ba630c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard VPN",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "174.193.81.151/32"
                ],
                "description": "SSH only from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "$(var.project_name)-app-sg",
            "name_prefix": "",
            "owner_id": "080403789929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fitflow-app-sg",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fitflow-app-sg",
              "Project": "fitflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0b958b94506d56a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:security-group/sg-03ee901be2a6981e5",
            "description": "Security group for FitFlow Jenkins Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ee901be2a6981e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard VPN",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "174.193.81.151/32"
                ],
                "description": "Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "174.193.81.151/32"
                ],
                "description": "SSH only from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fitflow-jenkins-sg",
            "name_prefix": "",
            "owner_id": "080403789929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fitflow-jenkins-sg",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fitflow-jenkins-sg",
              "Project": "fitflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0b958b94506d56a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:subnet/subnet-0c050708d5a882acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c050708d5a882acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "080403789929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "$(var.project_name)-public-subnet",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "$(var.project_name)-public-subnet",
              "Project": "fitflow"
            },
            "vpc_id": "vpc-0a0b958b94506d56a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:080403789929:vpc/vpc-0a0b958b94506d56a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09482c22f6ebd37b6",
            "default_route_table_id": "rtb-0854f7563a5ca3295",
            "default_security_group_id": "sg-07095ceb148cd98df",
            "dhcp_options_id": "dopt-0576b322adaf07a15",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0b958b94506d56a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0854f7563a5ca3295",
            "owner_id": "080403789929",
            "tags": {
              "Environment": "dev",
              "Name": "$(var.project_name)-vpc",
              "Project": "fitflow"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "$(var.project_name)-vpc",
              "Project": "fitflow"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}